# hn_hiring

./: .gitignore  README.md  pyproject.toml  requirements1.md  requirements2.md
hn_ingest/: __main__.py  api.py  cli.py  commands.py  db.py  extract.py  golden.py  html_text.py  llm.py  normalize.py  parse.py  report.py  schema.py
normalization/: city_aliases.yaml  country_aliases.yaml  currency_aliases.yaml  model_prices.json  remote_region_aliases.yaml  tech_aliases.yaml
prompts/: extract_v1.md
tests/: test_html_text.py  test_normalize.py  test_parse.py
