[project]
name = "hn-hiring-ingest"
version = "0.1.0"
description = "Ingest HN 'Who is hiring?' threads into SQLite"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.84",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hn_ingest"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
